fix: remove header margin on mobile

--- a/src/styles/partials/header.styl
+++ b/src/styles/partials/header.styl
@@ -88,6 +88,8 @@ header
     max-height: 68px
     position: fixed
     max-width: calc(100% - 24px);
+    margin-left: 0 !important
+    margin-right: 0 !important
 
     &.open
       padding-top: $spacing.md
